--- a/index.html
+++ b/index.html
@@ -180,20 +180,20 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  < src="/Users/jaystonsagun/Documents/CSP Projects/Images/DC44BEF4-F51D-4E27-95E7-32B4545ACBB0.JPG" style="width:100%">
+  <img src="/Users/jaystonsagun/Documents/CSP Projects/Images/DC44BEF4-F51D-4E27-95E7-32B4545ACBB0.JPG" style="width:100%">
   <div class="text">Here is a picture of me in a suit and tie. Am I ranch? Cus' I be dressin'. JK.
 </div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  < src="/Users/jaystonsagun/Documents/CSP Projects/Images/IMG_3503.JPG" style="width:100%">
+  <img src="/Users/jaystonsagun/Documents/CSP Projects/Images/IMG_3503.JPG" style="width:100%">
   <div class="text">Family is important to me. Here is a picture of my huge Filipino family, and this isn't even all of us!</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  < src="/Users/jaystonsagun/Documents/CSP Projects/Images/AAF9F50C-4378-4C0D-B676-E0B422F7AB99.JPG" style="width:100%">
+  <img src="/Users/jaystonsagun/Documents/CSP Projects/Images/AAF9F50C-4378-4C0D-B676-E0B422F7AB99.JPG" style="width:100%">
   <div class="text">I love traveling and experiencing new things. Here's a pic of me last year at the Grand Canyon.</div>
 </div>
 
