--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="/Users/jaystonsagun/Documents/CSP Projects/Images/IMG_3503.JPG" style="width:100%">
+  <img src="IMG_3503.JPG" style="width:100%">
   <div class="text">Family is important to me. Here is a picture of my huge Filipino family, and this isn't even all of us!</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="/Users/jaystonsagun/Documents/CSP Projects/Images/AAF9F50C-4378-4C0D-B676-E0B422F7AB99.JPG" style="width:100%">
+  <img src="/Users/jaystonsagun/Documents/CSP Projects/AAF9F50C-4378-4C0D-B676-E0B422F7AB99.JPG" style="width:100%">
   <div class="text">I love traveling and experiencing new things. Here's a pic of me last year at the Grand Canyon.</div>
 </div>
 
